--- a/samples/example/res/values/strings.xml
+++ b/samples/example/res/values/strings.xml
@@ -7,19 +7,21 @@
     <string name="action_append">Add</string>
     <string name="action_open">Show log entries</string>
     <string name="action_open_sessions">Show all log sessions</string>
-    <string name="action_download">Download nRF Logger from Play</string>
+    <string name="action_download">Get nRF Logger</string>
     
     <string name="action_append_hint">Some text</string>
     
+    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>
     <string-array name="log_levels">
         <item>DEBUG</item>
         <item>VERBOSE</item>
         <item>INFO</item>
+        <item>APPLICATION</item>
         <item>WARNING</item>
         <item>ERROR</item>
     </string-array>
     
-    <string name="error_no_lgger">nRF Logger is not installed.</string>
+    <string name="error_no_nrf_logger">nRF Logger is not installed. Using local log.</string>
     
     <string name="dialog_title">Create session</string>
     <string name="dialog_message">Please, provide a key and a name for the new log session:</string>
